14/10/2011	1.8.3 release

08/10/2011	More careful checking of iface name

06/10/2011	Updating buffer usage tracking in send_ra to track buffer usage BEFORE
		the buffer is used rather than after in order to prevent buffer overflow

06/10/2011	1.8.2 release

04/10/2011	1) A privilege escalation flaw was found in radvd, due to a buffer overflow
		in the process_ra() function.  ND_OPT_DNSSL_INFORMATION option parsing
		"label_len" was not checked for negative values, leading to a "suffix"
		buffer overflow which can lead to privilege escalation, at least if
		radvd is compiled without GCC's stack protection. If radvd is invoked
		without privilege separation (the -u option), this can lead to an
		escalation to root privileges.  Note: Red Hat Enterprise Linux starts
		radvd by default with the unprivileged user. (CVE-2011-3601)

		2) An arbitrary file overwrite flaw was found in radvd's
		set_interface_var() function, where it did not check the interface name
		(generated by the unprivileged user) and blindly overwrites a filename
		with a decimal value by the root process.  If a local attacker could
		create symlinks pointing to arbitrary files on the system, they could
		overwrite the target file contents.  If only radvd is compromised (e.g.
		no local access), the attacker may only overwrite files with specific
		names only (PROC_SYS_IP6_* from radvd's pathnames.h). (CVE-2011-3602)

		3) The radvd daemon would not fail on privsep_init() errors, which could
		cause it to run with full root privileges when it should be running as
		an unprivileged user. (CVE-2011-3603)

		4) A number of buffer overread flaws were found in radvd's process_ra()
		function due to numerous missed len() checks. This can lead to memory
		reads outside of the stack, resulting in a crash of radvd.
		(CVE-2011-3604)

		5) A temporary denial of service flaw was found in radvd's process_rs()
		function, where it would call mdelay() on the same thread in which it