@@ -1,3 +1,5 @@
+02/11/2011	Adding --nodaemon option
+
 14/10/2011	1.8.3 release
 
 08/10/2011	More careful checking of iface name
